@@ -38,11 +38,11 @@
       "ignore_return_code": "no",
       "run_time": {
         "fine_grain_timer_file": "tmp-ck-timer.json",
-        "run_cmd_main": "$#BIN_FILE#$ $#dataset_path#$$#dataset_filename#$ processed-picture.pgm -c",
+        "run_cmd_main": "$#BIN_FILE#$ $#dataset_path#$$#dataset_filename#$ processed-image.pgm -c",
         "run_cmd_out1": "tmp-output1.tmp",
         "run_cmd_out2": "tmp-output2.tmp",
         "run_output_files": [
-          "processed-picture.pgm",
+          "processed-image.pgm",
           "tmp-ck-timer.json"
         ]
       }
@@ -56,6 +56,8 @@
   ],
   "tags": [
     "demo",
+    "image",
+    "corner-detection",
     "lang-c",
     "susan-corners",
     "program",
